Add navbar e botões de cadastro

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.3.0/uicons-bold-straight/css/uicons-bold-straight.css'>
 
     <link rel="stylesheet" href="src/css/global.css" />
     <title>Playstation.com</title>
@@ -19,39 +20,47 @@
           </div>
           <section class="dropdown-menu">
             <div class="dropdown-container">
-              <button class="dropdown-button">Jogos</button>
+              <button class="dropdown-button">Jogos<i class="fi fi-bs-angle-down"></i></button>
             </div>
             <div class="dropdown-container">
-              <button class="dropdown-button">PS5</button>
+              <button class="dropdown-button">PS5<i class="fi fi-bs-angle-down"></i></button>
             </div>
             <div class="dropdown-container">
-              <button class="dropdown-button">PS4</button>
+              <button class="dropdown-button">PS4<i class="fi fi-bs-angle-down"></i></button>
             </div>
             <div class="dropdown-container">
-              <button class="dropdown-button">Serviços</button>
+              <button class="dropdown-button">Serviços<i class="fi fi-bs-angle-down"></i></button>
             </div>
             <div class="dropdown-container">
-              <button class="dropdown-button">Acessórios</button>
+              <button class="dropdown-button">Acessórios<i class="fi fi-bs-angle-down"></i></button>
             </div>
             <div class="dropdown-container">
-              <button class="dropdown-button">Notícias</button>
+              <button class="dropdown-button">Notícias<i class="fi fi-bs-angle-down"></i></button>
             </div>
             <div class="dropdown-container">
-              <button class="dropdown-button">Loja</button>
+              <button class="dropdown-button">Loja<i class="fi fi-bs-angle-down"></i></button>
             </div>
             <div class="dropdown-container">
-              <button class="dropdown-button">Suporte</button>
+              <button class="dropdown-button">Suporte<i class="fi fi-bs-angle-down"></i></button>
             </div>
           </section>
         </nav>
         <div class="navbar-actions">
-          <div class="button-container"><button type="button">Iniciar Sessão</button></div>
+          <div class="button-container"><button class="session-init-button" type="button">Iniciar Sessão</button></div>
           <div class="button-container">
             <button class="search-button">
               <span>Pesquisar</span
               ><img class="icon-search" src="src/assets/icons/search.svg" alt="" />
             </button>
           </div>
+        </div>
+      </div>
+      <div class="inner">
+        <div class="carossel-centered">
+          <img src="src/assets/icons/ps5-black-badge-01-en-11sep20.webp" alt="">
+          <ul class="menu-tertiary">
+            <li><a href="">PlayStation</a></li>
+          </ul>
         </div>
       </div>
     </header>
